--- a/Final Project/report.ipynb
+++ b/Final Project/report.ipynb
@@ -20,30 +20,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fac1e3d",
+   "id": "4677010c",
    "metadata": {},
    "source": [
     "## Deliverables\n",
     "We successfully finished all of our deliverables. They are listed below:\n",
     "#### Must accomplish\n",
-    "1. A program with a trained deep convolutional network with optimized structure and best tuned parameters, that can predict the age of the face in the input image\n",
-    "2. The prediction of the program should be distinctly better than simple benchmark run, like a logistic regression.\n",
-    "3. The program should use appropriate data preprocessing mothods to improve the performance.\n",
+    "1. A program with a trained deep convolutional network with optimized structure and best tuned parameters, that can predict the age of the face in the input image. ***(Fully implemented)***\n",
+    "2. The prediction of the program should be distinctly better than simple benchmark run, like a logistic regression. ***(Fully implemented)***\n",
+    "3. The program should use appropriate data preprocessing mothods to improve the performance. ***(Fully implemented)***\n",
     "\n",
     "#### Expect to accomplish\n",
-    "1. The program should be able to predict not only age but also sex and ethnicity of the face.\n",
-    "2. The program should use multiple different network structures, ensembles or other methods to further improve the performance.\n",
-    "3. The prediction of the program should reach an accuracy that is usable in real-life, like over 90%,.\n",
-    "4. Adding feature extraction methods before the network (like edge detection) to create more features from the image.\n",
+    "1. The program should be able to predict not only age but also sex and ethnicity of the face. ***(Fully implemented)***\n",
+    "2. The program should use multiple different network structures, ensembles or other methods to further improve the performance. ***(Fully implemented, used stack ensemble of ResNet18, DenseNet121, SqueezeNet1.1)***\n",
+    "3. The prediction of the program should reach an accuracy that is usable in real-life, like over 90%,. ***(Fully achieved for facial detection Faster-RCNN and age prediction in Ensemble, not achieved by age and race prediction.)***\n",
+    "4. Adding feature extraction methods before the network (like edge detection) to create more features from the image. ***(Fully implemented)***\n",
     "\n",
     "#### Would like to accomplish\n",
-    "1. The program should be able to first identify the location of the face in the image, and then predict using the cropped face area.\n",
-    "The position of the face should also be an output.\n",
-    "2. The program should be able to take in different sizes of image files.\n",
-    "3. The program should be able to identify an image with no face, instead of giving random output.\n",
+    "1. The program should be able to first identify the location of the face in the image, and then predict using the cropped face area. The position of the face should also be an output. ***(Fully implemented, very accurate)***\n",
+    "2. The program should be able to take in different sizes of image files. ***(Fully implemented)***\n",
+    "3. The program should be able to identify an image with no face, instead of giving random output. ***(Fully implemented, the model will output a score for each detection. If too low it will notify user)***\n",
     "4. The program should work with both RGB and grayscale images, and uses the RGB channels to achieve better performance than\n",
-    "grayscale.\n",
-    "5. The speed of the prediction should be fast enough to be done in real-time."
+    "grayscale. ***(Fully implemented)***\n",
+    "5. The speed of the prediction should be fast enough to be done in real-time. ***(Fully implemented, inference of one picture takes less than 1 second)***"
    ]
   },
   {
@@ -271,7 +270,132 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6abf2e9d",
+   "id": "565672c6",
+   "metadata": {},
+   "source": [
+    "# Model and pipeline design"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2078c3b2",
+   "metadata": {},
+   "source": [
+    "Here is an overview of the design of our program:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7928df81",
+   "metadata": {},
+   "source": [
+    "<img src=\"res/Pipeline.jpg\"> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb19d92d",
+   "metadata": {},
+   "source": [
+    "The program takes the input of a number of images with different sizes. The image can be either RGB or grayscale, but we will always extract 3 RGB channels from the program. Then, the 3 channels will be sent to feature engineering function and create channel 4 intensity and channel 5 edgemap. Also, the RGB channel images with different sizes will be sent to the Faster R-CNN model, which is a region detection convolution network with ResNet50 as its feature extraction backbone. We trained the RCNN to predict face region. Then, the network will predict a cropbox of each image, which can be used to crop the face region out of the image. After that, we added the intensity and edgemap channels to it, and resize the 5-channel image to 224 x 224 as it is the sized required by those classification networks.\n",
+    "We stacked three image classification networks as our classification ensemble. The ResNet 18, SqueezeNet 1.1 and DenseNet 121. They are all the smallest version of the corresponding networks, and we used ensemble to boost their performance. All of their outputs are connected to the fully connected final layer, and the output will be sent in to a softmax activation layer to predict label probabilities. We trained 3 sets of ensembles to predict age, sex and race as they have different number of classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bb385b8",
+   "metadata": {},
+   "source": [
+    "## Model Training Part I: Facial Detection: Faster-RCNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac9c3fd4",
+   "metadata": {},
+   "source": [
+    "<img src=\"res/Faster RCNN.png\"> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33931b28",
+   "metadata": {},
+   "source": [
+    "The Faster RCNN is consisted of 3 major networks. The first network is the backbone feature network, where we used a pre-trained ResNet50 model. The second one is the RPN network which is used to generate a sequence of possible bounding boxes, and the Detection network is the actual network to detect the facial region. Both the RPN and the Detection network produce a loss, and they are summed and backpropagated together."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78909153",
+   "metadata": {},
+   "source": [
+    "Our model and trainer are the \"rcnn.py\" and \"train_rcnn.py\". As we mentioned before, we did 5 fold cross validation on this model, and we recorded the detection score (which is produced by the detection network as a detection confidence score), validation loss and the root mean square error (RMSE) of the predicted boxes. Here is part of our code for model initialization for demonstration ONLY:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e928e2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code is only for demonstration purpose and not executable in Jupyter Notebook.\n",
+    "# Complete, executable script can be found in the deliverables (.py files)\n",
+    "\n",
+    "class Rcnn:\n",
+    "    \n",
+    "    def __init__(self, path, name, num_epochs, batch, pre=True):\n",
+    "        self.model = torchvision.models.detection.fasterrcnn_resnet50_fpn(pretrained=pre)\n",
+    "        num_classes = 2\n",
+    "        in_features = self.model.roi_heads.box_predictor.cls_score.in_features\n",
+    "        self.model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)\n",
+    "        self.path = os.path.join(path, name)\n",
+    "        self.device = torch.device(\"cuda:1\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        self.model.to(self.device)\n",
+    "        self.model.float()\n",
+    "        params = [p for p in self.model.parameters() if p.requires_grad]\n",
+    "        self.optimizer = optim.SGD(params, lr=0.005, momentum=0.9, weight_decay=0.0005)\n",
+    "        self.cur_epoch = 0\n",
+    "        self.epochs = num_epochs\n",
+    "        self.loss = np.infty\n",
+    "        self.best_loss = np.infty\n",
+    "        self.start_time = int(time.time())\n",
+    "        self.freq_for_save = 5\n",
+    "        self.batch = batch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3643b774",
+   "metadata": {},
+   "source": [
+    "As we can see from the code above, we replaced the FastRCNNPredictor in the model (which is the detection network) with a new one because the original model was trained in 91 labels but we are only using 2 labels here (Face and Not face). Here is the result status of our 5 fold cross validation:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92f15c95",
+   "metadata": {},
+   "source": [
+    "| Statistics  |Fold 0 | Fold 1 | Fold 2 | Fold 3 | Fold 4 |\n",
+    "| -------- | ---------- | ---------- | -------- | ---------- |---------- |\n",
+    "| Match Score | 99.4% | 99.4% | 99.7% | 99.8% | 99.1% |\n",
+    "| Validation loss | 0.049 | 0.047 | 0.059 | 0.041 | 0.048 |\n",
+    "| RMSE | 9.76 | 4.93 | 5.01 | 3.52 | 4.98 | "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b77408",
+   "metadata": {},
+   "source": [
+    "We can see that our match score is extremely high, indicating a good detection by the detection network. The validation loss is also quite slow, so we do not have a over fit problem (it is very close to train loss actually). Also, the RMSE is only around 5 pixels, which is quite small given that our images can be as large as 2000 x 2000 pixels, indicate a relatively accurate detection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e13de9fa",
    "metadata": {},
    "source": [
     "## Model Result Visualization: Facial Detection: Faster-RCNN\n",
@@ -281,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7766506",
+   "id": "bb9e2a1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b83885b",
+   "id": "956a6f9e",
    "metadata": {},
    "source": [
     "<img src=\"res/box1.png\"> \n",
@@ -325,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e4ffc7a",
+   "id": "ab0ae4b7",
    "metadata": {},
    "source": [
     "We can see that our predication is very accurate. The networks in each fold capture every face in each test set. We only show 3 random cases here, but all other results look as accurate as those, and the accuracy is quite consistent across the 5 folds. This demonstrates that the facial detection of our network is very reliable."
@@ -333,7 +457,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3feba58",
+   "id": "95660eff",
+   "metadata": {},
+   "source": [
+    " ## Model Train Rart II: The Ensemble\n",
+    " We will discuss the three networks used in the ensemble: ResNet18, SqueezeNet1.1 and DenseNet121."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d565c482",
+   "metadata": {},
+   "source": [
+    "### ResNet 18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f77aa69f",
+   "metadata": {},
+   "source": [
+    "<img src=\"res/resnet18.png\"> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd931ace",
+   "metadata": {},
+   "source": [
+    "Here is the diagram of the ResNet18 network we were using. It is a very common image classification network consisted of a long series of convolution layers, dropout layers and ReLu activations. ResNet18 is the smallest one of this set of networks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "748a4fcb",
    "metadata": {},
    "source": [
     "## Model Result Visualization: Label Prediction: The Ensemble\n",
@@ -343,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de114024",
+   "id": "b88a12c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c84c67",
+   "id": "3f5ff23a",
    "metadata": {},
    "source": [
     "We can see that both the prediction of sex and race are quite accurate, but for age the third one is a bit higher than it should be. We believe that there are three reasons for this: 1. The original labels of age may are not accurate, as we actually found some wrongly labeled ones and removed them, but there should still be some missing. 2. Age is very hard to predict even by human eyes, causing difficulties for the network (We also did not use the largest version of each model because of training time). 3. The labels are imbalanced. 26-30 actually is the most common label and the network is a bit biased to it."
@@ -406,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed9dce3",
+   "id": "ff9c021c",
    "metadata": {},
    "outputs": [],
    "source": []
